Few tweaks
