# src/Prezentownik.WebApi/Modules/UserLists/DTOs/CreateItemRequest.cs
@@ -1,7 +1,0 @@
-namespace Prezentownik.WebApi.Modules.UserLists.DTOs;
-
-public record CreateItemRequest(
-    string Name,
-    string? Description,
-    ItemType Type,
-    int? TargetQuantity);
